Adding command utlis and first command

--- a/Outliner.csproj
+++ b/Outliner.csproj
@@ -55,6 +55,8 @@
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
     </ApplicationDefinition>
+    <Compile Include="Util\CommandBase.cs" />
+    <Compile Include="Util\RelayCommand.cs" />
     <Compile Include="ViewModel\OutlineDocumentViewModel.cs" />
     <Compile Include="Util\ObservableObject.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
