Styling tree view expander button

--- a/Outliner.csproj
+++ b/Outliner.csproj
@@ -70,6 +70,10 @@
     <Compile Include="ViewModel\OutlineDocumentViewModel.cs" />
     <Compile Include="Util\ObservableObject.cs" />
     <Compile Include="ViewModel\ViewModelLocator.cs" />
+    <Page Include="Dictionary.xaml">
+      <SubType>Designer</SubType>
+      <Generator>MSBuild:Compile</Generator>
+    </Page>
     <Page Include="MainWindow.xaml">
       <Generator>MSBuild:Compile</Generator>
       <SubType>Designer</SubType>
