--- a/Outliner.csproj
+++ b/Outliner.csproj
@@ -41,6 +41,7 @@
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Data" />
+    <Reference Include="System.Windows.Interactivity, Version=4.5.0.0, Culture=neutral, PublicKeyToken=31bf3856ad364e35, processorArchitecture=MSIL" />
     <Reference Include="System.Xml" />
     <Reference Include="Microsoft.CSharp" />
     <Reference Include="System.Core" />
@@ -64,6 +65,11 @@
     <Compile Include="Util\CommandBase.cs" />
     <Compile Include="Util\FileDialogService.cs" />
     <Compile Include="Util\FocusBehavior.cs" />
+    <Compile Include="Util\FrameworkElementAdorner.cs" />
+    <Compile Include="Util\FrameworkElementDragBehavior.cs" />
+    <Compile Include="Util\FrameworkElementDropBehavior.cs" />
+    <Compile Include="Util\IDragable.cs" />
+    <Compile Include="Util\IDropable.cs" />
     <Compile Include="Util\IFileDialogService.cs" />
     <Compile Include="Util\RelayCommand.cs" />
     <Compile Include="ViewModel\MainWindowViewModel.cs" />
